--- a/samples/cpp/speech_generation/CMakeLists.txt
+++ b/samples/cpp/speech_generation/CMakeLists.txt
@@ -23,17 +23,10 @@ endif()
 
 # create main sample executable
 
-add_executable(text2speech text2speech.cpp audio_utils.cpp)
+ov_add_sample(
+        NAME text2speech
+        SOURCES text2speech.cpp audio_utils.cpp
+        DEPENDENCIES openvino::genai
+        INCLUDE_DIRECTORIES "$<BUILD_INTERFACE:${dr_libs_SOURCE_DIR}>")
 
-target_include_directories(text2speech PRIVATE "$<BUILD_INTERFACE:${dr_libs_SOURCE_DIR}>")
-target_link_libraries(text2speech PRIVATE openvino::genai)
-
-set_target_properties(text2speech PROPERTIES
-    # Ensure out of box LC_RPATH on macOS with SIP
-    INSTALL_RPATH_USE_LINK_PATH ON)
 target_compile_features(text2speech PRIVATE cxx_std_11)
-
-install(TARGETS text2speech
-        RUNTIME DESTINATION samples_bin/
-        COMPONENT samples_bin
-        EXCLUDE_FROM_ALL)
