--- a/samples/cpp/text_generation/CMakeLists.txt
+++ b/samples/cpp/text_generation/CMakeLists.txt
@@ -9,15 +9,10 @@ find_package(OpenVINOGenAI REQUIRED
 )
 
 function(add_sample_executable target_name)
-    add_executable(${target_name} ${target_name}.cpp)
-    target_link_libraries(${target_name} PRIVATE openvino::genai)
-    set_target_properties(${target_name} PROPERTIES
-        # Ensure out-of-box LC_RPATH on macOS with SIP
-        INSTALL_RPATH_USE_LINK_PATH ON)
-    install(TARGETS ${target_name}
-            RUNTIME DESTINATION samples_bin/
-            COMPONENT samples_bin
-            EXCLUDE_FROM_ALL)
+    ov_add_sample(
+            NAME ${target_name}
+            DEPENDENCIES openvino::genai
+            SOURCES ${target_name}.cpp)
 endfunction()
 
 set (SAMPLE_LIST
@@ -47,13 +42,7 @@ FetchContent_Declare(cxxopts
     URL_HASH SHA256=523175f792eb0ff04f9e653c90746c12655f10cb70f1d5e6d6d9491420298a08)
 FetchContent_MakeAvailable(cxxopts)
 
-add_executable(benchmark_genai benchmark_genai.cpp read_prompt_from_file.cpp)
-target_link_libraries(benchmark_genai PRIVATE openvino::genai cxxopts::cxxopts)
-set_target_properties(benchmark_genai PROPERTIES
-    # Ensure out of box LC_RPATH on macOS with SIP
-    INSTALL_RPATH_USE_LINK_PATH ON)
-
-install(TARGETS benchmark_genai
-        RUNTIME DESTINATION samples_bin/
-        COMPONENT samples_bin
-        EXCLUDE_FROM_ALL)
+ov_add_sample(
+        NAME benchmark_genai
+        SOURCES benchmark_genai.cpp read_prompt_from_file.cpp
+        DEPENDENCIES openvino::genai cxxopts::cxxopts)
