--- a/tools/continuous_batching/benchmark/CMakeLists.txt
+++ b/tools/continuous_batching/benchmark/CMakeLists.txt
@@ -26,15 +26,8 @@ find_package(Threads REQUIRED)
 
 # end of dependencies
 
-set(TARGET_NAME continuous_batching_benchmark)
-add_executable(${TARGET_NAME} ${TARGET_NAME}.cpp)
-target_link_libraries(${TARGET_NAME} PRIVATE openvino::genai nlohmann_json::nlohmann_json cxxopts::cxxopts Threads::Threads)
-
-set_target_properties(${TARGET_NAME} PROPERTIES
-    # Ensure out of box LC_RPATH on macOS with SIP
-    INSTALL_RPATH_USE_LINK_PATH ON)
-
-install(TARGETS ${TARGET_NAME} 
-        RUNTIME DESTINATION samples_bin/
-        COMPONENT tools_bin
-        EXCLUDE_FROM_ALL)
+genai_add_tool_target(
+        NAME continuous_batching_benchmark
+        ROOT ${CMAKE_CURRENT_SOURCE_DIR}
+        SOURCES continuous_batching_benchmark.cpp
+        LINK_LIBRARIES nlohmann_json::nlohmann_json cxxopts::cxxopts Threads::Threads)
