--- a/samples/cpp/visual_language_chat/CMakeLists.txt
+++ b/samples/cpp/visual_language_chat/CMakeLists.txt
@@ -15,43 +15,23 @@ file(DOWNLOAD
 
 # create main sample executable
 
-add_executable(visual_language_chat visual_language_chat.cpp load_image.cpp)
-target_include_directories(visual_language_chat PRIVATE "${CMAKE_BINARY_DIR}")
-target_link_libraries(visual_language_chat PRIVATE openvino::genai)
-
-set_target_properties(visual_language_chat PROPERTIES
-    # Ensure out of box LC_RPATH on macOS with SIP
-    INSTALL_RPATH_USE_LINK_PATH ON)
-
-install(TARGETS visual_language_chat
-        RUNTIME DESTINATION samples_bin/
-        COMPONENT samples_bin
-        EXCLUDE_FROM_ALL)
+ov_add_sample(
+        NAME visual_language_chat
+        SOURCES visual_language_chat.cpp load_image.cpp
+        DEPENDENCIES openvino::genai
+        INCLUDE_DIRECTORIES ${CMAKE_BINARY_DIR})
 
 # create encrypted model sample executable
 
-add_executable(encrypted_model_vlm encrypted_model_vlm.cpp load_image.cpp)
-target_include_directories(encrypted_model_vlm PRIVATE "${CMAKE_BINARY_DIR}")
-target_link_libraries(encrypted_model_vlm PRIVATE openvino::genai)
-
-set_target_properties(encrypted_model_vlm PROPERTIES
-    # Ensure out of box LC_RPATH on macOS with SIP
-    INSTALL_RPATH_USE_LINK_PATH ON)
-
-install(TARGETS encrypted_model_vlm
-        RUNTIME DESTINATION samples_bin/
-        COMPONENT samples_bin
-        EXCLUDE_FROM_ALL)
+ov_add_sample(
+        NAME encrypted_model_vlm
+        SOURCES encrypted_model_vlm.cpp load_image.cpp
+        DEPENDENCIES openvino::genai
+        INCLUDE_DIRECTORIES ${CMAKE_BINARY_DIR})
 
 # create benchmark executable
-add_executable(benchmark_vlm benchmark_vlm.cpp load_image.cpp ../text_generation/read_prompt_from_file.cpp)
-target_include_directories(benchmark_vlm PRIVATE "${CMAKE_BINARY_DIR}")
-target_link_libraries(benchmark_vlm PRIVATE openvino::genai cxxopts::cxxopts)
-set_target_properties(benchmark_vlm PROPERTIES
-    # Ensure out of box LC_RPATH on macOS with SIP
-    INSTALL_RPATH_USE_LINK_PATH ON)
-
-install(TARGETS benchmark_vlm
-        RUNTIME DESTINATION samples_bin/
-        COMPONENT samples_bin
-        EXCLUDE_FROM_ALL)
+ov_add_sample(
+        NAME benchmark_vlm
+        SOURCES benchmark_vlm.cpp load_image.cpp ../text_generation/read_prompt_from_file.cpp
+        DEPENDENCIES cxxopts::cxxopts openvino::genai
+        INCLUDE_DIRECTORIES ${CMAKE_BINARY_DIR})
